/*
 * $Id: ChangeLog,v 1.2531 2004/03/09 10:06:44 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-09 08:21 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/rtl/dbdelim.prg
    ! Fixed bug in APPEND FROM DELIMITED to import strings with """ and ","
      inside strings, reported by Elaine Steinberg
    * Optimized to use HB_FReadLine()

2004-03-09 17:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/hvm.c     -> hb_vmRegisterGlobals()
  * source/vm/classes.c -> __CLSNEW()
    ! optimization of functions by using hb_arraySet[Forward]() instead of
      hb_arrayAdd[Forward]() since the first one is more efficient, ie. only
      resize array once before itteration.

  * source/rtl/fparse.c
    % minor optimization.

2004-03-09 06:12 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/gtwvt/gtwvt.c
    * fixed bound check on Wvt_GetRGBColor
      (Thanks to Budyanto Dj.)

2004-03-09 04:10 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * xharbour.spec
    * This time really committed.

2004-03-09 05:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/extend.c
  * source/vm/hvm.c
  * source/vm/memvars.c
  * source/vm/classes.c
    ! optimization by avoiding the use of hb_itemSize() and hb_arrayLen()
      for items that we exactly know are of array or object type.

  * source/vm/arrays.c
    ! minor optimization on hb_arrayGetByRef() on releasing string.

2004-03-08 21:08 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/scroll.c
    * fixed check error on right margin if = 0
      (Thanks to Budyanto Dj.)

2004-03-08 09:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Changed getExpReal() (and calls) 5th paramater to int iContext